<resources>
    <string name="app_name">Sistema de Peluqueria</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Peluquería</string>

    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_inicio">Inicio</string>
    <string name="menu_micuenta">Mi cuenta</string>
    <string name="menu_servicioscontratados">Servicios contratados</string>
    <string name="menu_librodereclamaciones">Libro de reclamaciones</string>
    <string name="menu_cerrarsession">Cerrar sesión</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_registrate"><u>Registrate</u></string>
    <string name="login_notienescuenta">¿No tienes cuenta?</string>
    <string name="login_olvidemicontraseña"><u>Olvidé mi contraseña</u></string>
    <string name="login_textoIngresar">INGRESAR</string>
    <string name="login_textoContraseñaHint">Contraseña</string>
    <string name="login_textoCorreoHint">Correo</string>

    <!-- string mostrar categorias -->
    <string name="mostrarcategoriasPeinados">Peinados</string>
    <string name="mostrarcategoriasCortes">Cortes</string>
    <string name="mostrarcategoriasMaquillaje">Maquillaje</string>
    <string name="mostrarcategoriasCejas">Cejas</string>

    <!-- string mostrar especialistas -->

    <string name="region">region</string>
    <string-array name="languages">
        <item>C</item>
        <item>C++</item>
        <item>Java</item>
        <item>JavaScript</item>
        <item>VisualBasic</item>
    </string-array>

    <string name="provincia">provincia</string>
    <string-array name="languages1">
        <item>C</item>
        <item>C++</item>
        <item>Java</item>
        <item>JavaScript</item>
        <item>VisualBasic</item>
    </string-array>

    <string name="distrito">distrito</string>
    <string-array name="languages2">
        <item>C</item>
        <item>C++</item>
        <item>Java</item>
        <item>JavaScript</item>
        <item>VisualBasic</item>
    </string-array>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="sub_categoria">Sub Categoria</string>
    <string name="contratar">Contratar</string>
    <string name="ingresar_precio">Ingresar Precio</string>
    <string name="ingresar_cantidad">Ingresar Cantidad</string>
    <string name="ingresar_total">Ingresar Total</string>
    <string name="ingresar_fecha">Ingresar Fecha</string>
    <string name="ingresar_hora">Ingresar Hora</string>
    <string name="ingresar_direccion">Ingresar Direccion</string>
    <string name="constancia_de_pago">Constancia de pago</string>
    <string name="los_servicios_adicionales_se_coordinaran_directamente_con_el_personal">Los servicios adicionales se coordinaran directamente con el personal</string>
    <string name="precio">Precio:</string>
    <string name="jessica_ramirez">Jessica Ramirez</string>
    <string name="cantidad">Cantidad:</string>
    <string name="total">Total:</string>
    <string name="fecha">Fecha</string>
    <string name="hora">Hora:</string>
    <string name="direccion">Direccion:</string>
    <string name="qr_de_pago">Qr de pago:</string>
    <string name="todo">TODO</string>
    <string name="constancia_de_pagos">Constancia de Pagos:</string>
    <string name="servicio_contratado">Servicio Contratado:</string>
    <string name="peinado_matrimonial">Peinado Matrimonial</string>
    <string name="estado">Estado:</string>
    <string name="pendiente">Pendiente</string>
    <string name="cancelar_servicio">CANCELAR SERVICIO</string>
    <string name="estados">Estado</string>
    <string name="si_cancela_el_servicio_la_devolucion_del_pago_sera_previa_coordinacion_con_el_personal_contratado">Si cancela el servicio la devolucion del pago sera previa coordinacion con el personal contratado</string>
    <string name="_1">1</string>
    <string name="_100">100</string>
    <string name="_100">100</string>
    <string name="_2022_08_08">2022-08-08</string>
    <string name="_14_30">14:30</string>
    <string name="villa_los_angeles">Villa Los Angeles</string>

</resources>