<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_inicio"
            android:title="@string/menu_inicio"
            />

        <item
            android:id="@+id/navMiCuenta"
            android:title="@string/menu_micuenta"
             />
        <item
            android:id="@+id/nav_servicioscontratados"
            android:title="@string/menu_servicioscontratados"
            />
        <item
            android:id="@+id/navcerrarsesion"
            android:title="@string/menu_cerrarsession"
             />
        <item
            android:id="@+id/navmostrarEspecialista"
            android:title="Mostrar Especialistas"
            />
        <item
            android:id="@+id/navverespecilistasEnMapa"
            android:title="Especialistas en mapa"
            />
        <item
            android:id="@+id/navContratarServicio"
            android:title="Contratar servicio"
            />

        <item
            android:id="@+id/navCancelarServicio"
            android:title="Cancelar servicio"
            />
        <item
            android:id="@+id/navCalificarServicio"
            android:title="Calificar servicio"
            />
    </group>
</menu>