<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".InicioSesionActivity">

    <ImageView
        android:id="@+id/imgLoginLogo"
        android:layout_width="match_parent"
        android:layout_height="181dp"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="40dp"
        app:srcCompat="@mipmap/logo_peluqueria_foreground"
        />

    <EditText
        android:id="@+id/txtLoginCorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:drawableStart="@drawable/ic_email"
        android:ems="10"
        android:hint="@string/login_textoCorreoHint"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColor="@color/txtplaceholder"

        />

    <EditText
        android:id="@+id/txtLoginContraseña"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:ems="10"
        android:drawableStart="@drawable/ic_password"
        android:hint="@string/login_textoContraseñaHint"
        android:inputType="textPassword"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/btnLoginIngresar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="90dp"
        android:layout_marginRight="90dp"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="40dp"
        android:text="@string/login_textoIngresar"


        />

    <TextView
        android:id="@+id/txtOlvideMiContraseñaLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/login_olvidemicontraseña"
        android:textAlignment="center"
        android:textColor="#6A6A6A"
        />

    <TextView
        android:id="@+id/txtNoTienesCuentaLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/login_notienescuenta"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textStyle="bold"

        />

    <TextView
        android:id="@+id/lblRegisterLogin"
        android:layout_width="match_parent"
        android:layout_height="28dp"
        android:textColor="@color/colorRegistrate"
        android:text="@string/login_registrate"
        android:textAlignment="center"

        />

</LinearLayout>